[package]
name = "justjson"
version = "0.1.1"
edition = "2021"
description = "An efficient JSON Value crate that allows borrowing data."
license = "MIT OR Apache-2.0"
repository = "https://github.com/khonsulabs/justjson"
keywords = ["json"]
categories = ["parser-implementations"]
readme = "./README.md"
rust-version = "1.58"

[dependencies]

[workspace]
members = ["benchmarks", "xtask"]

[profile.bench]
lto = true
debug = true

[profile.release]
lto = true
debug = true
