[package]
name = "justjson"
version = "0.1.1"
edition = "2021"
description = "An efficient JSON Value crate that allows borrowing data."
license = "MIT OR Apache-2.0"
repository = "https://github.com/khonsulabs/justjson"
keywords = ["json"]
categories = ["parser-implementations"]
readme = "./README.md"
rust-version = "1.58"

[features]
default = ["std"]
std = ["alloc"]
alloc = []
nightly = []      # Enables unstable documentation features outside of docs.rs

[dependencies]
heapless = { version = "0.7.16", optional = true }


[workspace]
members = ["benchmarks", "xtask"]

[profile.bench]
lto = true
debug = true

[profile.release]
lto = true
debug = true

[[test]]
name = "roundtrip"
required-features = ["alloc"]

[[example]]
name = "borrowed-value"
required-features = ["alloc"]

[[example]]
name = "heapless"
required-features = ["heapless"]

[package.metadata.docs.rs]
rustc-args = ["--cfg", "docsrs"]
