[package]
name = "benchmarks"
version = "0.0.0"
edition = "2021"
publish = false

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
criterion = { version = "0.4.0", features = ["html_reports"] }
serde_json = "1.0.91"
justjson = { path = ".." }
json-deserializer = "0.4.4"
simd-json = { version = "0.7.0", optional = true }


[[bench]]
name = "benchmarks"
harness = false
